# mog_coding_guide_helper

./: .gitignore  CONFIG_IMPLEMENTATION.md  Cargo.toml  POINTER_TYPE_IMPLEMENTATION_PLAN.md  README.md  coding-guide.toml  enum_example.txt  example.txt  extern_example.txt  temp_debug.rs  test_function_format.c  test_functions.c  test_ifndef.c  test_sample.c  test_typedef.c  test_with_header.c  todo.md  union_example.txt
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  test_error.c
crates/core/benches/: parser_benchmark.rs
crates/core/src/: ast.rs  config.rs  diagnostics.rs  expression.rs  expression_parser.rs  formatter.rs  lexer.rs  lib.rs  parser.rs  span.rs  statement.rs  token.rs  type_system.rs  type_table.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: main.rs
editors/eclipse/: README.md  contentTypes.xml  setup.bat  setup.sh
editors/nvim/: README.md  example.lua
editors/vim/: README.md  example.vim
editors/vim/autoload/: coding_guide_helper.vim
editors/vim/plugin/: coding-guide-helper.vim
editors/vscode/: package-lock.json  package.json
examples/: backslash_error.c  test_elif.c  test_ifdef.c  test_pointer.c  valid_code.c
examples/subdir/: test.c
src/: ast.rs  diagnostics.rs  formatter.rs  lexer.rs  lib.rs  main.rs  parser.rs  span.rs  tests.rs  token.rs  trivia.rs
src/tests/: formatter_tests.rs  function_tests.rs  ifdef_tests.rs  lexer_basic_tests.rs  lexer_comment_tests.rs  lexer_define_tests.rs  lexer_include_tests.rs  lexer_keyword_tests.rs  lexer_typedef_tests.rs  mod.rs  parser_tests.rs  union_tests.rs
(+40 files in other folders)
