[package]
name = "coding-guide-helper-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coding-guide-helper-lsp"
path = "src/main.rs"

[dependencies]
coding-guide-helper-core = { path = "../core" }
tower-lsp = "0.20"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
